--- a/styles/style.css
+++ b/styles/style.css
@@ -217,6 +217,13 @@ hr{
     .left-side  img, .right-side img{
         width: 10%;
     }
+    nav{
+        display: flex;
+        justify-content:space-between;
+        align-items: center;
+       
+    
+    }
     
  } 
 
